@@ -13,23 +13,35 @@
 
 package org.eclipse.jetty.ee9.annotations;
 
+import java.io.IOException;
+import java.net.URISyntaxException;
+import java.net.URL;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
-import java.util.HashSet;
 import java.util.List;
+import java.util.Set;
 
 import org.eclipse.jetty.ee9.security.ConstraintSecurityHandler;
 import org.eclipse.jetty.ee9.servlet.ServletHolder;
 import org.eclipse.jetty.ee9.servlet.ServletMapping;
 import org.eclipse.jetty.ee9.webapp.DiscoveredAnnotation;
 import org.eclipse.jetty.ee9.webapp.WebAppContext;
+import org.eclipse.jetty.toolchain.test.FS;
+import org.eclipse.jetty.toolchain.test.jupiter.WorkDir;
+import org.eclipse.jetty.toolchain.test.jupiter.WorkDirExtension;
+import org.eclipse.jetty.util.TypeUtil;
+import org.eclipse.jetty.util.resource.ResourceFactory;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.anyOf;
 import static org.hamcrest.Matchers.containsInAnyOrder;
 import static org.hamcrest.Matchers.is;
+import static org.hamcrest.Matchers.notNullValue;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
@@ -38,8 +50,11 @@ import static org.junit.jupiter.api.Assertions.fail;
 /**
  * TestServletAnnotations
  */
+@ExtendWith(WorkDirExtension.class)
 public class TestServletAnnotations
 {
+    public WorkDir workDir;
+
     public class TestWebServletAnnotationHandler extends WebServletAnnotationHandler
     {
         List<DiscoveredAnnotation> _list = null;
@@ -61,16 +76,20 @@ public class TestServletAnnotations
     @Test
     public void testServletAnnotation() throws Exception
     {
-        List<String> classes = new ArrayList<String>();
-        classes.add("org.eclipse.jetty.ee9.annotations.ServletC");
+        Path root = workDir.getEmptyPathDir();
+        copyClass(org.eclipse.jetty.ee9.annotations.ServletC.class, root);
+
         AnnotationParser parser = new AnnotationParser();
 
         WebAppContext wac = new WebAppContext();
-        List<DiscoveredAnnotation> results = new ArrayList<DiscoveredAnnotation>();
+        List<DiscoveredAnnotation> results = new ArrayList<>();
 
         TestWebServletAnnotationHandler handler = new TestWebServletAnnotationHandler(wac, results);
 
-        parser.parse(Collections.singleton(handler), classes);
+        try (ResourceFactory.Closeable resourceFactory = ResourceFactory.closeable())
+        {
+            parser.parse(Collections.singleton(handler), resourceFactory.newResource(root));
+        }
 
         assertEquals(1, results.size());
         assertTrue(results.get(0) instanceof WebServletAnnotation);
@@ -98,14 +117,14 @@ public class TestServletAnnotations
     }
 
     @Test
-    public void testWebServletAnnotationOverrideDefault() throws Exception
+    public void testWebServletAnnotationOverrideDefault()
     {
         //if the existing servlet mapping TO A DIFFERENT SERVLET IS from a default descriptor we
         //DO allow the annotation to replace the mapping.
 
         WebAppContext wac = new WebAppContext();
         ServletHolder defaultServlet = new ServletHolder();
-        defaultServlet.setClassName("org.eclipse.jetty.servlet.DefaultServlet");
+        defaultServlet.setClassName("org.eclipse.jetty.ee10.servlet.DefaultServlet");
         defaultServlet.setName("default");
         wac.getServletHandler().addServlet(defaultServlet);
 
@@ -132,7 +151,7 @@ public class TestServletAnnotations
     }
 
     @Test
-    public void testWebServletAnnotationReplaceDefault() throws Exception
+    public void testWebServletAnnotationReplaceDefault()
     {
         //if the existing servlet mapping TO A DIFFERENT SERVLET IS from a default descriptor we
         //DO allow the annotation to replace the mapping.
@@ -183,7 +202,7 @@ public class TestServletAnnotations
     }
 
     @Test
-    public void testWebServletAnnotationNotOverride() throws Exception
+    public void testWebServletAnnotationNotOverride()
     {
         //if the existing servlet mapping TO A DIFFERENT SERVLET IS NOT from a default descriptor we
         //DO NOT allow the annotation to replace the mapping
@@ -218,7 +237,7 @@ public class TestServletAnnotations
     }
 
     @Test
-    public void testWebServletAnnotationIgnore() throws Exception
+    public void testWebServletAnnotationIgnore()
     {
         //an existing servlet OF THE SAME NAME has even 1 non-default mapping we can't use
         //any of the url mappings in the annotation
@@ -254,7 +273,7 @@ public class TestServletAnnotations
     }
 
     @Test
-    public void testWebServletAnnotationNoMappings() throws Exception
+    public void testWebServletAnnotationNoMappings()
     {
         //an existing servlet OF THE SAME NAME has no mappings, therefore all mappings in the annotation
         //should be accepted
@@ -277,14 +296,25 @@ public class TestServletAnnotations
 
     @Test
     public void testDeclareRoles()
-        throws Exception
     {
         WebAppContext wac = new WebAppContext();
         ConstraintSecurityHandler sh = new ConstraintSecurityHandler();
         wac.setSecurityHandler(sh);
-        sh.setRoles(new HashSet<String>(Arrays.asList(new String[]{"humpty", "dumpty"})));
+        sh.setRoles(Set.of("humpty", "dumpty"));
         DeclareRolesAnnotationHandler handler = new DeclareRolesAnnotationHandler(wac);
         handler.doHandle(ServletC.class);
         assertThat(sh.getRoles(), containsInAnyOrder("humpty", "alice", "dumpty"));
+    }
+
+    private void copyClass(Class<?> clazz, Path outputDir) throws IOException, URISyntaxException
+    {
+        String classRef = TypeUtil.toClassReference(clazz);
+        URL url = this.getClass().getResource('/' + classRef);
+        assertThat("URL for: " + classRef, url, notNullValue());
+
+        Path srcClass = Paths.get(url.toURI());
+        Path dest = outputDir.resolve(classRef);
+        FS.ensureDirExists(dest.getParent());
+        Files.copy(srcClass, dest);
     }
 }
